--- a/src/backend/ProjectAspNet.Application/ProjectAspNet.Application.csproj
+++ b/src/backend/ProjectAspNet.Application/ProjectAspNet.Application.csproj
@@ -7,9 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\shared\ProjectAspNet.Communication\ProjectAspNet.Communication.csproj" />
     <ProjectReference Include="..\..\shared\ProjectAspNet.Exceptions\ProjectAspNet.Exceptions.csproj" />
     <ProjectReference Include="..\ProjectAspNet.Domain\ProjectAspNet.Domain.csproj" />
+    <ProjectReference Include="..\ProjectAspNet.Infrastructure\ProjectAspNet.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
