--- a/src/backend/ProjectAspNet.Infrastructure/ProjectAspNet.Infrastructure.csproj
+++ b/src/backend/ProjectAspNet.Infrastructure/ProjectAspNet.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.SqlServer.Server" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProjectAspNet.Domain\ProjectAspNet.Domain.csproj" />
   </ItemGroup>
 
