--- a/src/backend/ProjectAspNet/appsettings.json
+++ b/src/backend/ProjectAspNet/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "sqlserverconnection": "Server=DESKTOP-AIT91VG;Database=MydotnetProject;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
