--- a/UseCase/UseCase.csproj
+++ b/UseCase/UseCase.csproj
@@ -17,6 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\src\backend\ProjectAspNet.Application\ProjectAspNet.Application.csproj" />
+    <ProjectReference Include="..\tests\CommonTestUtilities\CommonTestUtilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
