--- a/tests/CommonTestUtilities/CommonTestUtilities.csproj
+++ b/tests/CommonTestUtilities/CommonTestUtilities.csproj
@@ -8,9 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\backend\ProjectAspNet.Application\ProjectAspNet.Application.csproj" />
     <ProjectReference Include="..\..\src\shared\ProjectAspNet.Communication\ProjectAspNet.Communication.csproj" />
   </ItemGroup>
 
