feat database in memory and integration tests

--- a/src/backend/ProjectAspNet/appsettings.Development.json
+++ b/src/backend/ProjectAspNet/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "sqlserverconnection": "Server=DESKTOP-AIT91VG;Database=MydotnetProject;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "settings": {
+    "application": {
+      "cryptography": "gfewruql24"
     }
   }
+
 }
