refact integration tests and jwt tests

--- a/src/backend/ProjectAspNet/appsettings.Development.json
+++ b/src/backend/ProjectAspNet/appsettings.Development.json
@@ -1,5 +1,10 @@
 {
   "ConnectionStrings": {
-    "sqlserverconnection": "Server=DESKTOP-AIT91VG;Database=MydotnetProject;Trusted_Connection=True;TrustServerCertificate=True;"
+    "sqlserverconnection": "Server=localhost;Database=MydotnetProject;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Token": {
+    "Signkey": "wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww",
+    "Expiratetime": 40
   }
+
 }
