--- a/src/backend/ProjectAspNet/appsettings.json
+++ b/src/backend/ProjectAspNet/appsettings.json
@@ -1,3 +1,5 @@
 {
-
+  "ConnectionStrings": {
+    "sqlserverconnection": "Server=DESKTOP-AIT91VG;Database=MydotnetProject;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
