feat change user password and shared validators

--- a/src/backend/ProjectAspNet/appsettings.Development.json
+++ b/src/backend/ProjectAspNet/appsettings.Development.json
@@ -5,6 +5,10 @@
   "Token": {
     "Signkey": "wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww",
     "Expiratetime": 40
+  },
+  "settings": {
+    "application": {
+      "cryptography": "ljrbw24=68j/sns"
+    }
   }
-
 }
