--- a/src/backend/ProjectAspNet.Application/ProjectAspNet.Application.csproj
+++ b/src/backend/ProjectAspNet.Application/ProjectAspNet.Application.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
-    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+    <PackageReference Include="Sqids" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
