--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.sln.docstates
 *.userprefs
 
+src/backend/ProjectAspNet/appsettings.json
+src/backend/ProjectAspNet/appsettings.Test.json
+src/backend/ProjectAspNet/appsettings.Development.json
+
 # ignore Xamarin.Android Resource.Designer.cs files
 **/*.Droid/**/[Rr]esource.[Dd]esigner.cs
 **/*.Android/**/[Rr]esource.[Dd]esigner.cs
