feat get recipes by id

--- a/src/shared/ProjectAspNet.Communication/ProjectAspNet.Communication.csproj
+++ b/src/shared/ProjectAspNet.Communication/ProjectAspNet.Communication.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\backend\ProjectAspNet.Domain\ProjectAspNet.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
