--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,7 @@
 *.sln.docstates
 *.userprefs
 
-src/backend/ProjectAspNet/appsettings.json
-src/backend/ProjectAspNet/appsettings.Test.json
-src/backend/ProjectAspNet/appsettings.Development.json
+./src/backend/
 
 # ignore Xamarin.Android Resource.Designer.cs files
 **/*.Droid/**/[Rr]esource.[Dd]esigner.cs
