--- a/src/backend/ProjectAspNet.Application/ProjectAspNet.Application.csproj
+++ b/src/backend/ProjectAspNet.Application/ProjectAspNet.Application.csproj
@@ -6,8 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="File.TypeChecker" Version="4.1.1" />
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="Sqids" Version="3.1.0" />
   </ItemGroup>
