--- a/src/backend/ProjectAspNet.Infrastructure/ProjectAspNet.Infrastructure.csproj
+++ b/src/backend/ProjectAspNet.Infrastructure/ProjectAspNet.Infrastructure.csproj
@@ -9,14 +9,15 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.22.1" />
     <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="FluentMigrator" Version="5.2.0" />
-    <PackageReference Include="FluentMigrator.Runner" Version="5.2.0" />
+    <PackageReference Include="FluentMigrator" Version="6.0.0" />
+    <PackageReference Include="FluentMigrator.Runner" Version="6.0.0" />
+    <PackageReference Include="FluentMigrator.Runner.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Microsoft.SqlServer.Server" Version="1.0.0" />
     <PackageReference Include="OpenAI" Version="1.11.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
